--- a/topdev/Preprocessing.ipynb
+++ b/topdev/Preprocessing.ipynb
@@ -10,6 +10,8 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import re"
+    "import warnings"
+    "warnings.filterwarnings("ignore")"
    ]
   },
   {
